Fix link overflow

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 * {
-	margin: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0;
 	font-family: 'Raleway', sans-serif;
 	border: none;
 	outline: none;
@@ -13,7 +13,7 @@ body {
 }
 
 .navbar {
-	padding: 5vh;
+	padding: 5vh 5vh 5vh 1vh;
 	width: 100%;
 	position: fixed;
 	top: 0;
@@ -29,9 +29,8 @@ body {
 	font-size: 5vh;
 }
 
-.link-container {
-	
-}
+/* remove this if there's some problem in future (-_-) */
+
 
 .inlined {
 	display: inline;
@@ -42,22 +41,26 @@ body {
 	display: inline;
 }
 
+ul.nav-links {
+	float: right;
+}
 
 ul.nav-links li {
 	display: inline;
-	margin: 1vh 1vh 0 1vh;
+	margin: 0 5vh 0 0;
 	border-radius: 1vh;
 	padding: 1vh;
-	
 }
 
 ul.nav-links li.selected {
-	background-color: rgb(20, 150, 20);
+	background-color: rgb(40, 210, 80);
 }
 
 ul.nav-links li:hover {
 	background-color: white;
 	color: rgb(10, 10, 10);
+	box-shadow: rgb(20, 20, 20) 0.5vh 0.5vh 1vh;
+	padding: 1.4vh;
 }
 
 .cover {
